# compuzone

./: .env.example  .gitignore  ENVIRONMENT_GUIDE.md  README.md  catalog.py  combined_problem_definition.docx  dev.py  fix_conflict.py  fps_lookup.py  fps_map.json  index.html  main.py  menu_map.json  metadata.json  package-lock.json  package.json  parts_db.json  pipeline.py  pyproject.toml  requirements.txt  run_tests.py  server.py  server.ts  test_api.py  test_results.json  vite.config.ts
scraper/: README.md  build_chroma.py  requirements.txt  scrape_compuzone.py
scraper/output/: parts_db.json
scraper/output/chroma_db/: chroma.sqlite3
scripts/: crawl_compuzone_parts.py
src/: App.tsx  catalog.ts  types.ts
src/components/: ChatbotKomi.tsx  NotificationManager.tsx  StoreFront.tsx  StoreHeader.tsx
